<resources>
    <string name="app_name">GMarket</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_error">Invalid Email id</string>
    <string name="first_name_error">Invalid First Name</string>
    <string name="last_name_error">Invalid Last Name</string>
    <string name="mobile_error">Invalid Mobile Number</string>
    <string name="password_error">Password must be greater than 5 digit</string>
    <string name="Cpassword_error">Password Does Not Matched</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="featured_brands">Featured Products</string>
    <string name="categories">Categories</string>
    <string name="invalid_user_id">Invalid Mobile Number or Password</string>
    <string name="retry">Retry</string>
    <string name="user_already_exists">User Already Exists</string>
    <string name="forget_password">Forgot Password</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="shop_now">Shop Now</string>
    <string name="best_seller">Best Seller</string>
    <string name="new_arrival">New Arrival</string>
    <string name="cfaprice">FCFA 321</string>
    <string name="cart">My Cart</string>
    <string name="orders">Orders</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Log out</string>
    <string name="special_price_end_in">Special price end in less than 21h:00</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="no_cost_emi">No Cost EMI and More</string>
    <string name="registration_success">Congratulations! You are successfully registered.</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="unable_to_add_to_cart">Unable to add into cart</string>
    <string name="no_internet">Internet Connection Not Available</string>
    <string name="search">Search</string>
    <string name="qty">qty</string>
    <string name="change_address">Change Address</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="continue_text">Continue</string>
    <string name="select_varient">Select Varient</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="my_cart">My Cart</string>
    <string name="cart_item_deleted">Cart Item Removed</string>
    <string name="unable_to_remove">Unable To Remove From Cart</string>
    <string name="cart_empty_msg">Your cart is empty</string>
    <string name="remove_from_wishlist">Removed from wishlist</string>
    <string name="remove_from_wishlist_error">Unable to remove from wishlist</string>
    <string name="delivery">Delivery</string>
    <string name="contact_information">Contact Information</string>
    <string name="change_password">Change Password</string>
    <string name="address_book">Address Book</string>
    <string name="default_shipping_address">Default Shipping Address</string>
    <string name="default_billing_address">Default Billing Address</string>
    <string name="shipping_address_not_found">Shipping Address Not Found</string>
    <string name="billing_address_not_found">Billing Address Not Found</string>
    <string name="cart_updated">Cart Updated</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="enter_qty">Enter Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="enter_qty_error">Please enter quantity</string>
    <string name="unable_to_update_cart">Unable to Update Cart</string>
    <string name="address">Address</string>
    <string name="save_address">Save Address</string>
    <string name="company">Company</string>
    <string name="street_address_one">Street Address 1</string>
    <string name="street_address_two">Street Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip/Postal Code</string>
    <string name="country">Country</string>
    <string name="current_pass">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password_error">Please Enter Current Password</string>
    <string name="new_password__length_error">Password length should be minimum six characters</string>
    <string name="password_not_matched">Password Not Matched</string>
    <string name="password_change_success">Your password is successfully changed. Please Login Again! </string>
    <string name="select_country">Select Country</string>
    <string name="select_country_error">Please Select Country</string>
    <string name="add_address">Add Address</string>
    <string name="select_state">Select State</string>
    <string name="not_valid_mobile_no">Mobile Number Not Valid</string>
    <string name="enter_street_name">Enter Street Name</string>
    <string name="enter_city">Enter City</string>
    <string name="set_as_default_shipping">Set as default shipping</string>
    <string name="set_as_default_billing">Set as default billing</string>
    <string name="address_saved_successfully">Address Successfully Saved</string>
    <string name="update">Update</string>
    <string name="user_details_updated">Profile successfully updated</string>
    <string name="no_address_found">Save your delivery address to place your orders faster!</string>
    <string name="add_new_address">Add New Address</string>
    <string name="moved_to_cart">Moved to Cart</string>
    <string name="moved_to_cart_error">Unable to move into cart</string>
    <string name="move_to_wishlist">Move To WishList</string>
    <string name="moved_to_wishlist">Moved to wishlist</string>
    <string name="moved_to_wishlist_error">Unable to move into wishlist</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="facebook_app_id">226898304704725</string>
    <string name="fb_login_protocol_scheme">fb226898304704725</string>
    <string name="update_address">Update Address</string>
    <string name="address_updated">Address Updated Successfully</string>
    <string name="all_address">Address List</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="no_items_found">No Items Found</string>
    <string name="ship_to">Ship To:</string>
    <string name="view_order_details">View Order</string>
    <string name="order_id">Order Id-</string>
    <string name="date">Date-</string>
    <string name="order_status">Order Status</string>
    <string name="currency">FCFA</string>
    <string name="search_product">Search for Products</string>
    <string name="order_details">Order Details</string>
    <string name="sort_by">Sort By</string>
    <string name="filter_by">Filter By</string>
    <string name="sort_by_position">Position</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_price">Price</string>
    <string name="sort_by_price_low_to_high">Price - Low To High</string>
    <string name="sort_by_price_high_to_low">Price - High To Low</string>
    <string name="price">Price</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="place_order">Place Order</string>
    <string name="credit_debit_card">Credit/Debit/ATM</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="price_details">Price Details</string>
    <string name="price_at_items">Price</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="payment">Payment</string>
    <string name="deliver_to_this_address">Deliver to this Address</string>
    <string name="edit">Edit</string>
    <string name="order_placed">Congratulations! Your order is successfully placed</string>
    <string name="view_order">View Order Details</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="check_internet">Check Internet Connection and try again</string>
    <string name="empty_wishlist_msg">Your wishlist is empty</string>
    <string name="latest_products_men">Latest Products For Mens</string>
    <string name="latest_products_womens">Latest Products For Womens</string>
    <string name="select_color">Select Color</string>
    <string name="select_color_and_size">Please Select Color And Size</string>
    <string name="enter_email_id">Please enter email id</string>
    <string name="enter_mobile_no">Please enter mobile number</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_confirm_pass">Please enter password again</string>
    <string name="no_order_found">Look like you do not have any orders</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="enter_mobile_error">Enter mobile number</string>
    <string name="product_image">Product Image</string>
    <string name="in_stock">In Stock</string>
    <string name="stock_out">Not Available</string>
    <string name="product_not_available">Product Not Available Currently</string>
    <string name="out_of_stock">Stock Out</string>
    <string name="product_out_of_stock_error">Opps! Some products in the cart are currently out of stock</string>
    <string name="quantity_not_available">Quantity Not Available</string>
    <string name="quantity_not_available_error">Sorry, required quantity is not available currently !!</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="telephone">Telephone</string>
    <string name="comment">Comment</string>
    <string name="enter_comment">Please Enter Comment</string>
    <string name="request_submitted">Your request has been sent!!</string>
    <string name="enter_name">Enter Name</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="select_city">Select City</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="select_city_error">Please Select City</string>
    <string name="select_shipping_method">Select Shipping Method</string>
    <string name="plese_select_shipping_method">Please Select Shipping Method</string>
    <string name="please_add_shipping_address">Please Add Shipping Address</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="store_pick_up">Store Pickup</string>
    <string name="crash_toast_text">Crash Report</string>
    <string name="change_language">Change Language</string>
    <string name="select_language">Select Language</string>
    <string name="language_changed">Language Changed Successfully\\</string>
    <string name="make_payment">Do you want to make payment? or Continue shopping?</string>
    <string name="make_payment_text">Make Payment</string>
    <string name="continue_">Continue</string>
</resources>