<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context=".ContactUs.ContactUsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/custom_cat_toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_dp"
        android:gravity="center"
        android:textSize="15dp"
        android:textColor="@color/red"
        android:textAllCaps="true"
        android:text="@string/contact_information"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/twenty_dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                />
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_black"
                android:paddingLeft="@dimen/five_dp"

                android:minHeight="@dimen/thirty_five_dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="@dimen/twenty_dp"

                />
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/five_dp"
                android:background="@drawable/square_black"
                android:minHeight="@dimen/thirty_five_dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                android:layout_marginTop="@dimen/twenty_dp"

                />
            <EditText
                android:id="@+id/et_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_black"
                android:minHeight="@dimen/thirty_five_dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:layout_marginTop="@dimen/twenty_dp"

                />
            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:paddingLeft="@dimen/five_dp"
                android:gravity="start"
                android:minLines="4"
                android:background="@drawable/square_black"
                android:minHeight="@dimen/thirty_five_dp"
                />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:minHeight="@dimen/thirty_five_dp"
                android:background="@drawable/button_shape_blue"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
    <ProgressBar
        android:id="@+id/p_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>