<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/ten_dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textSize="18dp"
            android:padding="@dimen/ten_dp"
            android:textColor="@color/black"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_dark"></View>
        <RadioButton
            android:id="@+id/rb_sort_by_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawablePadding="30dp"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/sort_by_name"
            android:textColor="@color/blue"
            android:padding="@dimen/five_dp"
            android:textSize="16dp"
            android:gravity="center_vertical"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_dark"></View>
        <RadioButton
            android:id="@+id/rb_sort_by_price_low_to_high"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawablePadding="30dp"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/sort_by_price_low_to_high"
            android:textColor="@color/blue"
            android:padding="@dimen/five_dp"
            android:textSize="16dp"
            android:gravity="center_vertical"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_dark"></View>
        <RadioButton
            android:id="@+id/rb_sort_by_price_high_to_low"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawablePadding="30dp"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/sort_by_price_high_to_low"
            android:textColor="@color/blue"
            android:padding="@dimen/five_dp"
            android:textSize="16dp"
            android:gravity="center_vertical"
            />
    </LinearLayout>

</RelativeLayout>