<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_payment"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAllCaps="false"

            android:background="@drawable/button_shape_blue"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            android:textSize="13dp"
            android:padding="5dp"
            android:text="@string/continue_"
            />
        <Button
            android:id="@+id/btn_make_payment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAllCaps="false"
android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:background="@drawable/button_shape_blue"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:layout_weight="0.5"

            android:text="@string/make_payment_text"
            />
    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>